--- a/PAGES/8e_TS-highOrderFunctions/index.html
+++ b/PAGES/8e_TS-highOrderFunctions/index.html
@@ -2508,9 +2508,9 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>Recall that functions in Julia are  <em>first-class objects</em>, meaning that they can be manipulated as any other variable. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> The feature is also known as functions being  <em>first-class citizens</em>.  </span></span> This enables us to define vectors of functions, create functions that return other functions, and more.</p>
-<p>In particular, it enables the definition of <span style="color: rgb(62, 121, 180);"><strong>high-order functions</strong></span>: functions that take another function as an argument. We&#39;ve already worked with several examples of these functions where anonymous functions were used as input &#40;e.g., <code>map</code> and <code>filter</code>&#41;. </p>
-<p>In this context, the question is whether high-order functions are type stable.  </p>
+<p>Recall that functions in Julia are  <em>first-class objects</em>, meaning that they can be manipulated as any other variable. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> Equivalently, it&#39;s said that functions are  <em>first-class citizens</em>.  </span></span> This enables us to define vectors of functions, create functions that return other functions, and more.</p>
+<p>In particular, it enables the definition of <span style="color: rgb(62, 121, 180);"><strong>high-order functions</strong></span>: functions that take another function as an argument. We&#39;ve already worked with several examples of them, where anonymous functions were used as an input &#40;e.g., <code>map</code> and <code>filter</code>&#41;. </p>
+<p>Next, we consider the conditions under which high-order functions are type stable.  </p>
 <p>      </div>
     </div>
   </div>
