--- a/PAGES/8c_barrierFunctions/index.html
+++ b/PAGES/8c_barrierFunctions/index.html
@@ -2508,7 +2508,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>This section discusses a technique known as <span style="color: rgb(62, 121, 180);"><strong>barrier functions</strong></span> for addressing type instability. Barrier functions are type-stable functions embedded within a type-unstable function, compelling the compiler to infer the types of their arguments when the type-unstable function is called. By doing so, barrier functions resolve any ambiguous type by identifying the data types involved.</p>
+<p>This section discusses a technique for addressing type instability known as <span style="color: rgb(62, 121, 180);"><strong>barrier functions</strong></span>. These are defined as type-stable functions embedded within a type-unstable function. In case a variable has an ambiguous type, the barrier function solves the issue by passing the variable as an argument. Thus, the compiler is compelled to identify its type by engaging in type inference.</p>
 <p> <div class=warning>  <div class=title>  <span class="warning_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/warning.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b>Warning!</b> - Barrier Functions Should be a Second Option </span>  </div>  <div class=content>     Barrier functions should be reserved for situations where the type instability is either difficult to fix or inherent to the operations performed. The reason is that the original function would still be type unstable. Considering this, strive for type-stable code from the outset whenever possible.  </div>  </div> </p>
@@ -2521,7 +2521,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Applying Barrier Functions</h2></p>
-<p>To better illustrate the barrier-function technique, let&#39;s revisit an example from <a href="/julia_book/PAGES/7b1_performanceBasics/#type_stability">a previous section</a>. This was considering a function that defines a variable <code>y</code> based on <code>x</code>, and subsequently computes an operation involving <code>y</code>. Below, we reproduce it.</p>
+<p>To better illustrate the technique, let&#39;s revisit a type-unstable function from a previous section. This defines a variable <code>y</code> based on <code>x</code>, and subsequently computes an operation involving <code>y</code>. Below, we reproduce it.</p>
  <div class=" code_box"> <details  open><summary> Type Instability  </summary> <div class="code_inline"><div class="code_NoFormat"><pre><code class="language-julia">function foo&#40;x&#41;
     y &#61; &#40;x &lt; 0&#41; ?  0  :  x
     
@@ -2530,8 +2530,8 @@ end
 
 @code_warntype foo&#40;1&#41;       # type stable
 @code_warntype foo&#40;1.&#41;      # type UNSTABLE</code></pre> </div> </div>  </details></div>
-<p>The type instability arises because <code>0</code> is an integer, whereas <code>x</code> could be either an <code>Int64</code> or a <code>Float64</code>. In case <code>x</code> is <code>Int64</code>, <code>y</code> will also be an integer and make <code>foo&#40;1&#41;</code> type stable. Conversely, if <code>x</code> is <code>Float64</code>, the compiler is unable to determine whether <code>y</code> will be an <code>Int64</code> or a <code>Float64</code>, making <code>foo&#40;1.&#41;</code> type unstable.</p>
-<p>To fix the type instability, we can use <span style="color: rgb(62, 121, 180);"><strong>a barrier function</strong></span>, which embeds a type-stable function into <code>foo</code> to identify the ambiguous type of <code>y</code>. In the example below, the barrier function is referred to as <code>operation</code>. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> The example is simply for illustrative purposes. In this case, a better fix is to change <code>0</code> by <code>zero&#40;x&#41;</code>, where <code>zero&#40;x&#41;</code> provides the specific zero element for the type of <code>x</code>.  </span></span></p>
+<p>The type instability arises because <code>0</code> is an integer, whereas <code>x</code> could be either an <code>Int64</code> or a <code>Float64</code>. In case <code>x</code> is <code>Int64</code>, then <code>y</code> will also be an integer and so <code>foo&#40;1&#41;</code> is type stable. However, if <code>x</code> is <code>Float64</code>, the compiler is unable to determine whether <code>y</code> will be an <code>Int64</code> or a <code>Float64</code>. Consequently, <code>foo&#40;1.&#41;</code> is type unstable.</p>
+<p>Address the type instability through a barrier functions requires embedding a type-stable function into <code>foo</code>, with <code>y</code> passed as one of its arguments. By doing so, the function will identify <code>y</code>&#39;s type any subsequent computation can still specialize. In the example below, the barrier function is referred to as <code>operation</code>. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> Notice that there&#39;s an easier solution for this example. This replaces <code>0</code> by <code>zero&#40;x&#41;</code>, where <code>zero&#40;x&#41;</code> returns the null element for the type of <code>x</code>.  </span></span></p>
  <div class=" code_box"> <details  open><summary> Barrier Function  </summary> <div class="code_inline"><div class="code_NoFormat"><pre><code class="language-julia">operation&#40;y&#41; &#61; &#91;y * i for i in 1:100&#93;
 
 function foo&#40;x&#41;
@@ -2540,15 +2540,15 @@ function foo&#40;x&#41;
     operation&#40;y&#41;
 end
 
-@code_warntype operation&#40;1&#41;    # barrier function - type stable
-@code_warntype operation&#40;1.&#41;   # barrier function - type stable
+@code_warntype operation&#40;1&#41;    # barrier function is type stable
+@code_warntype operation&#40;1.&#41;   # barrier function is type stable
 
 @code_warntype foo&#40;1&#41;          # type stable
 @code_warntype foo&#40;1.&#41;         # barrier-function solution</code></pre> </div> </div>  </details></div>
-<p>In this version, the variable <code>y</code> in <code>foo&#40;1.&#41;</code> could still be an <code>Int64</code> or <code>Float64</code>. However, this is irrelevant for the subsequent computations, as <code>operation&#40;y&#41;</code> will identify the type of <code>y</code> before executing the for-loop. Thus, <code>&#91;y * i for i in 1:100&#93;</code> will be executed using a method specialized for the type of <code>y</code>. </p>
+<p>In this version, the variable <code>y</code> in <code>foo&#40;1.&#41;</code> could still be an <code>Int64</code> or <code>Float64</code>. However, this becomes irrelevant, as <code>operation&#40;y&#41;</code> will identify the type of <code>y</code> before entering the array comprehension. Thus, <code>&#91;y * i for i in 1:100&#93;</code> will be computed using a method specialized for the type of <code>y</code>. </p>
  <div class=warning>  <div class=title>  <span class="warning_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/warning.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b>Warning!</b> </span>  </div>  <div class=content>     Barrier Functions should resolve the type instability  <em>before</em> the type unstable operation is executed. Otherwise, we&#39;re back to the original issue, where the compiler has to check <code>y</code>&#39;s type at each iteration and select a method accordingly.</p>
+      <b>Warning!</b> </span>  </div>  <div class=content>     Barrier Functions should address the type instability  <em>before</em> the type unstable operation is executed. Otherwise, we&#39;re back to the original issue, where the compiler has to check <code>y</code>&#39;s type at each iteration and select a method accordingly.</p>
 <p>For example, <code>foo&#40;1.&#41;</code> in the code below is not applying the barrier-function technique properly. The reason is that <code>y</code> could be <code>Float64</code> or <code>Int64</code>, and <code>operation&#40;y,i&#41;</code> only identifies the type inside the for-loop. This implies that the compiler must check <code>y</code>&#39;s at each iteration of the for-loop.</p>
 <p> <div class=" code_box"> <details  open><summary> Wrong Use  </summary> <div class="code_inline"><div class="code_NoFormat"><pre><code class="language-julia">operation&#40;y,i&#41; &#61; y * i 
 
@@ -2569,8 +2569,8 @@ end
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Remarks on @code_warntype</h2></p>
-<p>The use of barrier functions makes it more difficult to interpret the <code>@code_warntype</code> output. The reason is that we could even get a red warning issued, despite that the barrier function has resolved the type instability. Furthermore, it&#39;s possible that the barrier function doesn&#39;t eliminate the type instability, but rather mitigate it.</p>
-<p>To illustrate each, let&#39;s start presenting a scenario where the barrier function does indeed address the type instability.</p>
+<p>The use of barrier functions makes it more difficult to interpret the output of <code>@code_warntype</code>. The reason is that we could still get a red warning issued, despite that the barrier function has resolved the type instability. Furthermore, barrier functions tend to mitigate the type instability, rather than completely eliminate it.</p>
+<p>To illustrate all this, let&#39;s start presenting a scenario where the barrier function does indeed address the type instability.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2618,7 +2618,7 @@ end</code></pre> </div></div>
     <button class="tablink" data-id=""> Barrier Function </button>
     <button class="tablink" data-id=""> Type Stable </button>
 </div><div data-id="" class="tabcontent active">
-<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">x            &#61; &#91;&quot;a&quot;, 1&#93;                     # variable with type &#39;Any&#39;
+<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">x &#61; &#91;&quot;a&quot;, 1&#93;                     # variable with type &#39;Any&#39;
 
 
 
@@ -2634,7 +2634,7 @@ end</code></pre> </div></div>
     </p>
     </div> </div> 
  </div><div data-id="" class="tabcontent">
-<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">x            &#61; &#91;&quot;a&quot;, 1&#93;                     # variable with type &#39;Any&#39;
+<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">x &#61; &#91;&quot;a&quot;, 1&#93;                     # variable with type &#39;Any&#39;
 
 operation&#40;y&#41; &#61; &#91;y * i for i in 1:100&#93;
 
@@ -2650,7 +2650,7 @@ end</code></pre> </div></div>
     </p>
     </div> </div> 
  </div><div data-id="" class="tabcontent">
-<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">x            &#61; &#91;&quot;a&quot;, 1&#93;                     # variable with type &#39;Any&#39;
+<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">x &#61; &#91;&quot;a&quot;, 1&#93;                     # variable with type &#39;Any&#39;
 
 operation&#40;y&#41; &#61; &#91;y * i for i in 1:100&#93;
 
