--- a/PAGES/7e_onAllocations/index.html
+++ b/PAGES/7e_onAllocations/index.html
@@ -2508,9 +2508,9 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>As a programmer, you&#39;ll need to work with data. In turn, the data are stored in the computer&#39;s RAM to be accessed and manipulated. The process of reserving a portion of the memory to store data can have a significant impact on performance, depending on the approach chosen. We&#39;ll see in particular that <strong>memory allocations on the so-called heap</strong> are costly. Following common parlance in programming, we&#39;ll simply refer to them as <span style="color: rgb(62, 121, 180);"><strong>memory allocations</strong></span>. </p>
-<p>From a practical standpoint, <strong>a disproportionate memory allocation is a red flag</strong>: when two approaches for an identical operation exhibit big differences in memory allocation, they&#39;ll likely differ in execution speed. The reason is that managing memory slows down computations, as it requires additional instructions to be executed by the CPU. </p>
-<p>Despite this, the relationship between memory allocation and performance is complex. In fact, <strong>reducing memory allocation is neither necessary nor sufficient for speeding up computations</strong>—we&#39;ll see some &#40;rare&#41; instances where allocating more memory turns out to be faster. Basically, this is possible because creating a new object ensures the data are stored in a contiguous block of memory, allowing the CPU to access information more efficiently. </p>
+<p>As a programmer, you&#39;ll need to work with data, which need to be stored in the computer&#39;s RAM. The approach chosen for reserving this memory space can have a significant impact on performance. In particular <strong>memory allocations on the so-called heap</strong> are costly. Following common parlance in programming, we&#39;ll simply refer to them as <span style="color: rgb(62, 121, 180);"><strong>memory allocations</strong></span>. </p>
+<p>From a practical standpoint, <strong>a disproportionate memory allocation is a red flag</strong>: when two approaches for an identical operation exhibit big differences in memory allocation, they&#39;ll likely differ in execution speed. The reason is that managing memory requires additional instructions to be executed by the CPU, which slows down computations.</p>
+<p>Despite this claim, you should keep in mind that the relationship between memory allocation and performance is complex. In fact, <strong>reducing memory allocation is neither necessary nor sufficient for speeding up computations</strong>—we&#39;ll present instances where allocating more memory turns out to be faster. Basically, this occurs because creating a new object makes the data be stored in a contiguous block of memory, allowing the CPU to access information more efficiently. </p>
 <p>      </div>
     </div>
   </div>
@@ -2552,7 +2552,7 @@ color: white;
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified May 28, 2024 
+          © Martin Alfaro <br>Last Modified May 29, 2024 
       </span> 
   </div> 
 </footer>
