--- a/PAGES/8b_TS-globalVariables/index.html
+++ b/PAGES/8b_TS-globalVariables/index.html
@@ -2510,7 +2510,7 @@ color: white;
         <h2>Introduction</h2></p>
 <p><span style="color: rgb(62, 121, 180);"><strong>Global variables</strong></span> can be accessed and modified anywhere in the code. In contrast, <span style="color: rgb(62, 121, 180);"><strong>local variables</strong></span> are only accessible within a specific scope &#40;e.g., in a function or a loop&#41;. </p>
 <p><strong>Operations with global variables are a common source of type instability</strong>: since they can be redefined at any point, Julia treats them as having type <code>Any</code>. This type ambiguity explains why performing operations in the global scope is slow—the compiler has to consider multiple possible methods for each operation, precluding specialization.</p>
-<p>This section explores two approaches to make operations with global variables type-stable: type-annotating global variables and declaring global variables as constants. The latter approach is particularly convenient for variables that remain unmodified throughout the script, like <code>π &#61; 3.1415926535897</code>.</p>
+<p>This section explores two approaches to making operations with global variables type-stable: type-annotating global variables and declaring global variables as constants. The latter approach is particularly convenient for variables that remain unmodified throughout the script, like <code>π &#61; 3.1415926535897</code>.</p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px; padding-right:0.4em;"><strong>Local Variables</strong>  </span>  </div>  <div class=content> <strong>We'll exclusively refer to local variables in relation to a function's scope</strong>. They encompass both function arguments and variables defined inside the function.  </div>  </div>
 <p>      </div>
@@ -2699,7 +2699,7 @@ y &#61; &quot;world&quot;</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified May 28, 2024 
+          © Martin Alfaro <br>Last Modified May 29, 2024 
       </span> 
   </div> 
 </footer>
