--- a/PAGES/9f_lazy/index.html
+++ b/PAGES/9f_lazy/index.html
@@ -2508,8 +2508,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>Computations can be categorized as either &quot;lazy&quot; or &quot;eager&quot;. <span style="color: rgb(62, 121, 180);"><strong>Lazy operations</strong></span> only define the code to be executed, without generating the output immediately. They&#39;re essentially a form of deferred computation. In contrast, <span style="color: rgb(62, 121, 180);"><strong>eager operations</strong></span> are executed as soon as they&#39;re defined, providing instant access to the results. So far, most of the operations performed on this website fell into the eager category.</p>
-<p>Lazy operations can significantly boost performance, especially when applied to intermediate computations. This stems from two factors. Firstly, lazy evaluation enables Julia to <strong>sidestep unnecessary memory allocations</strong>. By deferring computations until they&#39;re actually needed, Julia is able to perform calculations on the fly and feed them directly into the final computations. Secondly, lazy operations facilitate <strong>fusing operations</strong>, a process that combines multiple operations into a single more efficient one. This provides Julia with a comprehensive view of the intended operation, allowing it to implement optimized approaches.</p>
+<p>Computations can be categorized as either &quot;lazy&quot; or &quot;eager&quot;. <span style="color: rgb(62, 121, 180);"><strong>Lazy operations</strong></span> only define the code to be executed, without generating the output immediately. They&#39;re a form to defer computation. In contrast, <span style="color: rgb(62, 121, 180);"><strong>eager operations</strong></span> are executed as soon as they&#39;re defined, providing instant access to the results. So far, most of the operations performed on this website have fallen into the eager category.</p>
+<p>Lazy operations can significantly boost performance, especially when applied to intermediate computations. This stems from two factors. Firstly, lazy evaluation enables Julia to <strong>sidestep unnecessary memory allocations</strong>. By deferring computations until they&#39;re actually needed, Julia is able to perform calculations on the fly and feed them directly into the final computations. Secondly, lazy operations facilitate <strong>the fusing of operations</strong>, a process that combines multiple operations into a single more efficient one. This provides Julia with a comprehensive view of the intended operation, allowing it to implement optimized approaches.</p>
 <p>      </div>
     </div>
   </div>
@@ -2519,9 +2519,9 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Generators</h2></p>
-<p><span style="color: rgb(62, 121, 180);"><strong>Generators</strong></span> are <strong>a lazy alternative to array comprehensions</strong> that create arrays by iterating over values. Unlike array comprehensions, which eagerly compute and store all the elements in memory, they defer the computation of values until needed.</p>
+<p><span style="color: rgb(62, 121, 180);"><strong>Generators</strong></span> are <strong>a lazy alternative to array comprehensions</strong> that create arrays by iterating over values. Unlike array comprehensions, which eagerly compute and store all the elements in memory, generators defer the computation of values until they&#39;re required.</p>
 <p>Generators share the same syntax as array comprehensions, except they&#39;re enclosed in parentheses <code>&#40; &#41;</code> instead of square brackets <code>&#91; &#93;</code>. They also maintain the same flexibility as array comprehensions, including the ability to add conditions and iterate simultaneously over multiple collections.</p>
-<p>The code snippet below exemplifies how to define generators, which formally define an object with type <code>Base.Generator</code>.</p>
+<p>Below, we exemplify how to define generators, which formally define an object with type <code>Base.Generator</code>.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2540,7 +2540,7 @@ color: white;
 <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>x</code> <br/> <pre><code class="plaintext code-output">Base.Generator{UnitRange{Int64}, typeof(identity)}(identity, 1:10)</code></pre> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>To illustrate the performance benefits of generators, let&#39;s consider a scenario where we create a vector and then sum its elements. The example showcases how generators are capable of reducing memory allocations, by bypassing the storage of intermediate outputs. Specifically, the generator directly feeds its output to <code>sum</code>, allowing Julia to take a holistic approach to the computation. This enables the compiler to perform the sum through a reduction, avoiding the need for any temporary storage. Overall, Julia operates on scalars, which don&#39;t allocate. </p>
+<p>To illustrate the performance benefits of generators, let&#39;s create a vector and then sum its elements. The example showcases how generators are capable of reducing memory allocations, by bypassing the storage of intermediate outputs. Specifically, the generator directly feeds its output to <code>sum</code>, allowing Julia to take a holistic approach to the computation. This enables the compiler to perform the sum through a reduction, thereby avoiding the need for any temporary storage. Overall, Julia ends up operating with scalars, which don&#39;t allocate. </p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2575,7 +2575,7 @@ foo&#40;x&#41; &#61; sum&#40;a * 2 for a in x&#41;              # 0 allocations<
 </code></pre> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>The last tab shows that generators can also be passed directly as a function argument. This approach isn&#39;t particular to built-in functions like <code>sum</code>, but actually extends to  <em>any</em> function accepting a collection as its input.</p>
+<p>The last tab shows that generators can also be passed directly as a function argument. This approach isn&#39;t specific to built-in functions like <code>sum</code>, and it actually extends to  <em>any</em> function accepting a collection as its input.</p>
 <p>      </div>
     </div>
   </div>
@@ -2585,7 +2585,7 @@ foo&#40;x&#41; &#61; sum&#40;a * 2 for a in x&#41;              # 0 allocations<
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Iterators</h2></p>
-<p>Throughout the website, we&#39;ve already presented numerous cases with lazy iterators. For instance, the range <code>1:10</code> represents a lazy sequence of numbers, which are accessed one-by-one on demand when iterated over in a for-loop. The fact that ranges are lazy explains why we must call the function <code>collect</code> to materialize them into vectors. Other examples of lazy iterators covered on the website are <code>eachindex</code>, <code>enumerate</code>, and <code>zip</code>. </p>
+<p>Throughout the website, we&#39;ve already presented numerous cases involving lazy iterators. For instance, the range <code>1:10</code> represents a lazy sequence of numbers, which are accessed one-by-one on demand. This explains their convenience for iterating in a for-loop, as they avoid materializing the collection. The fact that ranges are lazy also explains why we must call the function <code>collect</code> to materialize them into vectors. Other examples of lazy iterators covered on the website are <code>eachindex</code>, <code>enumerate</code>, and <code>zip</code>. </p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2604,8 +2604,8 @@ foo&#40;x&#41; &#61; sum&#40;a * 2 for a in x&#41;              # 0 allocations<
  10</code></pre> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>Moreover, the package <code>Iterators</code> is &quot;imported&quot; every time we run a session in Julia. It provides several methods for generating lazy sequences, as well as functions that perform operations lazily. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> For more options, see the package <code>IterTools</code>.  </span></span> </p>
-<p>Examples of the latter are <code>Iterators.filter</code> and <code>Iterators.map</code>, which are the lazy implementations of <code>filter</code> and <code>map</code>. The following example shows their ability to eliminate memory allocation of intermediate computations, thereby reducing the memory footprint of their eager counterparts.</p>
+<p>Additional functionalities are provided by the package <code>Iterators</code>, which is &quot;imported&quot; every time we run a session in Julia. The package provides several methods for generating lazy sequences, as well as functions that perform operations lazily. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> The package <code>IterTools</code> extends <code>Iterators</code>, providing even more functionalities.  </span></span> </p>
+<p>Examples of the latter are <code>Iterators.filter</code> and <code>Iterators.map</code>, which are the lazy implementations of <code>filter</code> and <code>map</code>. The following example demonstrates that they eliminate memory allocation of intermediate computations, thereby reducing the memory footprint of their eager counterparts.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2664,8 +2664,8 @@ end</code></pre> </div></div>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Lazy Broadcasting</h2></p>
-<p>There&#39;s a lazy version of broadcasting, available through the package <code>LazyArrays</code>. This requires the inclusion of the macro <code>@~</code> at the start of the operation to be broadcasted.</p>
-<p>Even if we don&#39;t store the result, any broadcasted operation creates a temporary vector. One solution would be to replace the broadcasted expressions with a generator. However, this would make the code overly verbose. On the contrary, <code>@~</code> keeps the code short and readable. This is illustrated in the following example, where lazy broadcasting additionally entails zero memory allocations.</p>
+<p>There&#39;s a lazy version of broadcasting, available through the package <code>LazyArrays</code>. This requires the inclusion of the macro <code>@~</code> at the start of the broadcasting operation.</p>
+<p>This is particularly useful because, even if we don&#39;t store the result, any broadcasted operation creates a temporary vector. One solution would be to replace the broadcasted expressions with a generator. However, this would make the code overly verbose. On the contrary, <code>@~</code> keeps the code short and readable. This is illustrated in the following example, where lazy broadcasting additionally entails zero memory allocations.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2754,7 +2754,7 @@ end</code></pre> </div></div>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified May 28, 2024 
+          © Martin Alfaro <br>Last Modified May 29, 2024 
       </span> 
   </div> 
 </footer>
